added sensing team

--- a/_data/collaborations.yml
+++ b/_data/collaborations.yml
@@ -19,7 +19,7 @@
   info: Post Doc, started Apr 2022
   email: 
   number_educ: 1
-  research1:
+  research1: spectrum_sensing
   research2:
   education1:  Cyclostationarity, Statistical Signal Processing, Machine Learning
   education2: "Highlights: "
