--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,12 +1,12 @@
 - name: <a href="http://dword1511.info/me/">Chi Zhang</a>
   photo: chi.jpg
   duration: 2017-2019 (Now at Google, SD)
-  info: Chi was a postdoc whose research interests include energy-efficient wireless networking, precision & robust localization, wireless power delivery, as well as mobile & ubiquitous sensing.
+  info: Postdoc in wireless networking and sensing. Ph.D. at Universityof Wisconsin, Madison
   email: c4zhang [at] eng.ucsd.edu
   number_educ: 2
   research1: wireless-sensing
   research2:
-  education1: Ph.D. at University of Wisconsin, Madison
+  education1: Chi was a Postdoc whose research interests include energy-efficient wireless networking, precision & robust localization, wireless power delivery, as well as mobile & ubiquitous sensing.
   education2: "Highlights: Mobisys'19, Mobicom'20, ISSCC'20"
   education3:
   education4:
