Team MS/BS addition and mmflexible paper update

--- a/_data/students_masters.yml
+++ b/_data/students_masters.yml
@@ -172,7 +172,7 @@
   number_educ: 0
   education1: 
 
-- name: Madhimitha Venkatesh 
+- name: Madhumitha Venkatesh 
   photo: rock.jpg
   info: Master student since 2022
   project: Smart Surface Project
