--- a/_data/students_masters.yml
+++ b/_data/students_masters.yml
@@ -180,3 +180,12 @@
   research2:
   number_educ: 0
   education1: 
+
+- name: Zih-Hao Fu
+  photo: rock.jpg
+  info: Master student since 2022
+  project: 3D Video Compression
+  research1:
+  research2:
+  number_educ: 0
+  education1:
