changed webpage link and picture for kshitiz

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -52,8 +52,8 @@
   education3:
   education4:
 
-- name: <a href='https://www.linkedin.com/in/kshitiz-bansal-789869111/'>Kshitiz Bansal</a>
-  photo: kshitiz.jpg
+- name: <a href='https://kshitiz-bansal.netlify.app/'>Kshitiz Bansal</a>
+  photo: kshitiz_new.jpg
   info: PhD Student, started 2018
   email: ksbansal [at] eng.ucsd.edu
   number_educ: 2
