making changes to viwid website

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,24 @@
+- title: "WiROS: WiFi sensing toolbox for robotics"
+  image: wiros.jpg
+  description: "Many recent works have explored using WiFi-based sensing to improve SLAM, robot manipulation or exploration. Moreover, widespread availability makes WiFi the most advantageous RF signal to leverage. But WiFi sensors lack an accurate, tractable, and versatile toolbox, which hinders their widespread adoption with robot's sensor stacks. 
+
+    We develop WiROS to address this immediate need, furnishing many WiFi-related measurements as easy-to-consume ROS topics. Specifically, WiROS is a plug-and-play WiFi sensing toolbox providing access to coarse-grained WiFi signal strength (RSSI), fine-grained WiFi channel state information (CSI), and other MAC-layer information (device address, packet id's or frequency-channel information). Additionally, WiROS open-sources state-of-art algorithms to calibrate and process WiFi measurements to furnish accurate bearing information for received WiFi signals. The open-sourced repository is https://github.com/ucsdwcsng/WiROS"
+  short-desc: "Open-sourced ROS compatible WiFi sensing framework to easily integrate WiFi-based sensing into robot sensors stacks"
+  authors: William Hunter*, Aditya Arun*, Dinesh Bharadia
+  link:
+    url: https://wcsng.ucsd.edu/wiros/
+    display:  "[IPSN Demo 2023]"
+  highlight: 1
+  tag1: wireless-sensing
+  tag2:
+  news1: 
+  website: 
+    url: https://wcsng.ucsd.edu/wiros/
+    display: "[Webpage]"
+  paper: 
+    url: https://github.com/ucsdwcsng/WiROS
+    display:  "[GitHub]"
+
 - title: "Users are Closer than they Appear: Protecting User's Location from WiFi APs"
   image: mirage.png
   description: "Wi-Fi-based indoor localization has now matured for over a decade. Most of the current localization algorithms rely on the Wi-Fi access points (APs) in the enterprise network to localize the Wi-Fi user accurately. Thus, the Wi-Fi user's location information could be easily snooped by an attacker listening through a compromised Wi-Fi AP. With indoor localization and navigation being the next step towards automation, it is important to give users the capability to defend against such attacks. In this paper, we present MIRAGE, a system that can utilize the downlink physical layer information to create a defense against an attacker snooping on a Wi-Fi user's location information. MIRAGE achieves this by utilizing the  beamforming capability of the transmitter that is already part of the Wi-Fi standard protocols. With this initial idea, we have demonstrated that the user can obfuscate his/her location from the Wi-Fi AP always with no compromise to the throughput of the existing Wi-Fi communication system through the real-world prototype, and reduce the user location accuracy of the attacker from 2.3m to more than 10m through simulation."
@@ -35,28 +56,6 @@
   paper: 
     url: https://arxiv.org/pdf/2209.08091.pdf
     display: "[paper]"
-
-- title: "WiROS: WiFi sensing toolbox for robotics"
-  image: wiros.png
-  description: "Many recent works have explored using WiFi-based sensing to improve SLAM, robot manipulation or exploration. Moreover, widespread availability makes WiFi the most advantageous RF signal to leverage. But WiFi sensors lack an accurate, tractable, and versatile toolbox, which hinders their widespread adoption with robot's sensor stacks. 
-
-    We develop WiROS to address this immediate need, furnishing many WiFi-related measurements as easy-to-consume ROS topics. Specifically, WiROS is a plug-and-play WiFi sensing toolbox providing access to coarse-grained WiFi signal strength (RSSI), fine-grained WiFi channel state information (CSI), and other MAC-layer information (device address, packet id's or frequency-channel information). Additionally, WiROS open-sources state-of-art algorithms to calibrate and process WiFi measurements to furnish accurate bearing information for received WiFi signals. The open-sourced repository is https://github.com/ucsdwcsng/WiROS"
-  short-desc: "Open-sourced ROS compatible WiFi sensing framework to easily integrate WiFi-based sensing into robot sensors stacks"
-  authors: William Hunter*, Aditya Arun*, Dinesh Bharadia
-  link:
-    url: 
-    display:  "[IPSN Demo 2023]"
-  highlight: 1
-  tag1: wireless-sensing
-  tag2:
-  news1: 
-  website: 
-    url: https://wcsng.ucsd.edu/wiros/
-    display: "[Webpage]"
-  paper: 
-    url: 
-    display: "[full paper]"
-
 
 - title: "mmFlexible: Flexible Directional Frequency Multiplexing for Multi-user mmWave Networks"
   image: dpa.png
