add production build as a service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '3'
 services:
-  web:
+  local:
     build: .
     command: bundle exec jekyll serve --watch --force_polling --host=0.0.0.0
+    volumes:
+      - .:/website
+    ports:
+      - "4000:4000"
+
+  remote:
+    build: .
+    environment:
+      - JEKYLL_ENV=production
+    command: bundle exec jekyll build
     volumes:
       - .:/website
     ports:
