--- a/.github/workflows/build_and_copy.yml
+++ b/.github/workflows/build_and_copy.yml
@@ -3,7 +3,7 @@ name: Build Docker Image and Copy to Server
 on: 
   push:
     branches:
-      - main  # Trigger the workflow on push events to main branch
+      - gh-pages-main  # Trigger the workflow on push events to main branch
 
 jobs:
   build:
