--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,14 @@
+- date: May 2023
+  headline: Ish and Rohith presented two papers at Infocom'23 in New York and IEEE SnP'23 in San Franscisco. Read news articles on <a href="https://today.ucsd.edu/story/uc-san-diego-researchers-present-new-wireless-system-for-greater-5g-access">mmFlexible</a> and <a href="https://today.ucsd.edu/story/team-develops-new-attacker-device-to-improve-autonomous-car-safety">mmSpoof</a>.
+
+- date: Apr 2023
+  headline: Ish is chairing <a href="http://wcsng.ucsd.edu/s3/">Mobicom S3 2023</a> workshop and Dinesh, Ish and Roshan are co-chairing <a href="https://wcsng.ucsd.edu/mmNets2023/">Mobicom mmNets 2023</a> workshop at Madrid, Spain. 
+  
+- date: Mar 2023
+  headline: Best Poster Runner-up - Hotmobile 2023 goes to <a href="https://wcsng.ucsd.edu/dpa/">Towards Flexible Frequency-dependent mmWave Multi-Beamforming</a>. Congrats Ish and Rohith!
 - date: Jan 2023
   headline: "Mobicom'23 accepted GreenMO and IMWUT'23 accepted WiFoceSticker. Congrats Agrim and team!"
-
+  
 - date: Jan 2023
   headline: "Hotmobile'23 accepted paper on MIRAGE - privacy fo user location. Congrats Roshan, Aditya, and Wei!"
 
