--- a/_data/pictures.yml
+++ b/_data/pictures.yml
@@ -1,5 +1,9 @@
 
 
+- title: vatsank_bday
+  image: vatsank_bday.jpg
+- title: roshan_graduation
+  image: roshan_graduation.jpg
 
 - title: dinner_2022
   image: dinner_2022.jpg
