--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ description: > # this means to ignore newlines until "baseurl:"
   sensor networks, and machine learning. 
   Some of our impact areas are Medical Diagnosis, Telecommunications, V2X, VR/AR and Safety.
   We work with software radios such as USRP, WARP board, GPS, Quantenna WiFi.
-baseurl: ""
-url: ""
+baseurl: "/Labpage"
+url: "https://cuhkdovsjasonteam-crypto.github.io"
 
 include:
   - .htaccess
